[package]
name = "asn1_der_schema_fast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.10"
regex = "1.10"
walkdir = "2.5"
itoa = "1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
